# proposals

./: .pre-commit-config.yaml  README.md
.github/ISSUE_TEMPLATE/: config.yml  new_pipeline.yml  new_rfc.yml  new_special_interest_group.yml
.github/workflows/: fix-linting.yml  pipeline_approval.yml  pipeline_proposals.yml  pre-commit.yml  rfc_approval.yml  sig_approval.yml  specialinterestgroup_approval.yml  test-approval-automation.yml
.github/workflows/lib/: .gitignore  README.md  approval.js  approval.py  approval.test.js  package-lock.json  package.json  pyproject.toml  workflow-integration.test.js
.github/workflows/lib/scripts/: __init__.py  pipeline_approval.py  rfc_approval.py  sig_approval.py
.github/workflows/lib/tests/: __init__.py  test_approval.py  validate_approval_logic.py
proposals/: 0001-proposals-rfcs.md  0044-advisories.md  0046-topic-channels.md  0089-proposals-vip.md  0091-nf-core-llm-ai-statement.md
