[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-approval-automation"
version = "1.0.0"
description = "Python GitHub approval automation for nf-core proposals"
requires-python = ">=3.11"
dependencies = [
    "PyGithub>=2.1.1",
    "rich-click>=1.6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
py-modules = ["approval"]

[project.scripts]
sig-approval = "scripts.sig_approval:main"
rfc-approval = "scripts.rfc_approval:main"
pipeline-approval = "scripts.pipeline_approval:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]

